deploy: 442ea12b4bc9c81f1e733628206b54239a0f4e09

--- a/pull/58/classes/WidgetApi.html
+++ b/pull/58/classes/WidgetApi.html
@@ -24,7 +24,7 @@
 <ul class="tsd-hierarchy">
 <li><span class="target">WidgetApi</span></li></ul></section><aside class="tsd-sources">
 <ul>
-<li>Defined in <a href="https://github.com/saasquatch/squatch-js/blob/06aca41/src/api/WidgetApi.ts#L24">src/api/WidgetApi.ts:24</a></li></ul></aside>
+<li>Defined in <a href="https://github.com/saasquatch/squatch-js/blob/442ea12/src/api/WidgetApi.ts#L24">src/api/WidgetApi.ts:24</a></li></ul></aside>
 <section class="tsd-panel-group tsd-index-group">
 <section class="tsd-panel tsd-index-panel">
 <details class="tsd-index-content tsd-index-accordion" open><summary class="tsd-accordion-summary tsd-index-summary">
@@ -38,6 +38,7 @@
 <h3 class="tsd-index-heading">Properties</h3>
 <div class="tsd-index-list"><a href="WidgetApi.html#domain" class="tsd-index-link"><svg class="tsd-kind-icon" viewBox="0 0 24 24"><g id="icon-1024"><rect fill="var(--color-icon-background)" stroke="#FF984D" stroke-width="1.5" x="1" y="1" width="22" height="22" rx="12"></rect><path d="M9.354 16V7.24H12.174C12.99 7.24 13.638 7.476 14.118 7.948C14.606 8.412 14.85 9.036 14.85 9.82C14.85 10.604 14.606 11.232 14.118 11.704C13.638 12.168 12.99 12.4 12.174 12.4H10.434V16H9.354ZM10.434 11.428H12.174C12.646 11.428 13.022 11.284 13.302 10.996C13.59 10.7 13.734 10.308 13.734 9.82C13.734 9.324 13.59 8.932 13.302 8.644C13.022 8.356 12.646 8.212 12.174 8.212H10.434V11.428Z" fill="var(--color-text)"></path></g></svg><span>domain</span></a>
 <a href="WidgetApi.html#npmCdn" class="tsd-index-link"><svg class="tsd-kind-icon" viewBox="0 0 24 24"><use href="#icon-1024"></use></svg><span>npm<wbr/>Cdn</span></a>
+<a href="WidgetApi.html#referralCookie" class="tsd-index-link"><svg class="tsd-kind-icon" viewBox="0 0 24 24"><use href="#icon-1024"></use></svg><span>referral<wbr/>Cookie</span></a>
 <a href="WidgetApi.html#tenantAlias" class="tsd-index-link"><svg class="tsd-kind-icon" viewBox="0 0 24 24"><use href="#icon-1024"></use></svg><span>tenant<wbr/>Alias</span></a>
 </div></section>
 <section class="tsd-index-section">
@@ -78,24 +79,41 @@
 </code><button>Copy</button></pre>
 </div><aside class="tsd-sources">
 <ul>
-<li>Defined in <a href="https://github.com/saasquatch/squatch-js/blob/06aca41/src/api/WidgetApi.ts#L45">src/api/WidgetApi.ts:45</a></li></ul></aside></li></ul></section></section>
+<li>Defined in <a href="https://github.com/saasquatch/squatch-js/blob/442ea12/src/api/WidgetApi.ts#L45">src/api/WidgetApi.ts:45</a></li></ul></aside></li></ul></section></section>
 <section class="tsd-panel-group tsd-member-group">
 <h2>Properties</h2>
 <section class="tsd-panel tsd-member"><a id="domain" class="tsd-anchor"></a>
 <h3 class="tsd-anchor-link"><span>domain</span><a href="#domain" aria-label="Permalink" class="tsd-anchor-icon"><svg viewBox="0 0 24 24"><use href="#icon-anchor"></use></svg></a></h3>
 <div class="tsd-signature"><span class="tsd-kind-property">domain</span><span class="tsd-signature-symbol">:</span> <span class="tsd-signature-type">string</span></div><aside class="tsd-sources">
 <ul>
-<li>Defined in <a href="https://github.com/saasquatch/squatch-js/blob/06aca41/src/api/WidgetApi.ts#L26">src/api/WidgetApi.ts:26</a></li></ul></aside></section>
+<li>Defined in <a href="https://github.com/saasquatch/squatch-js/blob/442ea12/src/api/WidgetApi.ts#L26">src/api/WidgetApi.ts:26</a></li></ul></aside></section>
 <section class="tsd-panel tsd-member"><a id="npmCdn" class="tsd-anchor"></a>
 <h3 class="tsd-anchor-link"><span>npm<wbr/>Cdn</span><a href="#npmCdn" aria-label="Permalink" class="tsd-anchor-icon"><svg viewBox="0 0 24 24"><use href="#icon-anchor"></use></svg></a></h3>
 <div class="tsd-signature"><span class="tsd-kind-property">npm<wbr/>Cdn</span><span class="tsd-signature-symbol">:</span> <span class="tsd-signature-type">string</span></div><aside class="tsd-sources">
 <ul>
-<li>Defined in <a href="https://github.com/saasquatch/squatch-js/blob/06aca41/src/api/WidgetApi.ts#L27">src/api/WidgetApi.ts:27</a></li></ul></aside></section>
+<li>Defined in <a href="https://github.com/saasquatch/squatch-js/blob/442ea12/src/api/WidgetApi.ts#L27">src/api/WidgetApi.ts:27</a></li></ul></aside></section>
+<section class="tsd-panel tsd-member"><a id="referralCookie" class="tsd-anchor"></a>
+<h3 class="tsd-anchor-link"><span>referral<wbr/>Cookie</span><a href="#referralCookie" aria-label="Permalink" class="tsd-anchor-icon"><svg viewBox="0 0 24 24"><use href="#icon-anchor"></use></svg></a></h3>
+<div class="tsd-signature"><span class="tsd-kind-property">referral<wbr/>Cookie</span><span class="tsd-signature-symbol">:</span> <span class="tsd-signature-symbol">(</span><span class="tsd-signature-symbol">(</span><span class="tsd-signature-symbol">)</span><span class="tsd-signature-symbol"> =&gt; </span><span class="tsd-signature-type ">Promise</span><span class="tsd-signature-symbol">&lt;</span><a href="../types/ReferralCookie.html" class="tsd-signature-type tsd-kind-type-alias">ReferralCookie</a><span class="tsd-signature-symbol">&gt;</span><span class="tsd-signature-symbol">)</span><span class="tsd-signature-symbol"> = ...</span></div>
+<div class="tsd-type-declaration">
+<h4>Type declaration</h4>
+<ul class="tsd-parameters">
+<li class="tsd-parameter-signature">
+<ul class="tsd-signatures">
+<li class="tsd-signature" id="referralCookie.__type.__type-1"><span class="tsd-signature-symbol">(</span><span class="tsd-signature-symbol">)</span><span class="tsd-signature-symbol">: </span><span class="tsd-signature-type ">Promise</span><span class="tsd-signature-symbol">&lt;</span><a href="../types/ReferralCookie.html" class="tsd-signature-type tsd-kind-type-alias">ReferralCookie</a><span class="tsd-signature-symbol">&gt;</span></li>
+<li class="tsd-description">
+<div class="tsd-comment tsd-typography"><p>Looks up the referral code of the current user, if there is any.</p>
+</div>
+<h4 class="tsd-returns-title">Returns <span class="tsd-signature-type ">Promise</span><span class="tsd-signature-symbol">&lt;</span><a href="../types/ReferralCookie.html" class="tsd-signature-type tsd-kind-type-alias">ReferralCookie</a><span class="tsd-signature-symbol">&gt;</span></h4><p>code referral code if true.</p>
+
+<div class="tsd-comment tsd-typography"></div></li></ul></li></ul></div><aside class="tsd-sources">
+<ul>
+<li>Defined in <a href="https://github.com/saasquatch/squatch-js/blob/442ea12/src/api/WidgetApi.ts#L170">src/api/WidgetApi.ts:170</a></li></ul></aside></section>
 <section class="tsd-panel tsd-member"><a id="tenantAlias" class="tsd-anchor"></a>
 <h3 class="tsd-anchor-link"><span>tenant<wbr/>Alias</span><a href="#tenantAlias" aria-label="Permalink" class="tsd-anchor-icon"><svg viewBox="0 0 24 24"><use href="#icon-anchor"></use></svg></a></h3>
 <div class="tsd-signature"><span class="tsd-kind-property">tenant<wbr/>Alias</span><span class="tsd-signature-symbol">:</span> <span class="tsd-signature-type">string</span></div><aside class="tsd-sources">
 <ul>
-<li>Defined in <a href="https://github.com/saasquatch/squatch-js/blob/06aca41/src/api/WidgetApi.ts#L25">src/api/WidgetApi.ts:25</a></li></ul></aside></section></section>
+<li>Defined in <a href="https://github.com/saasquatch/squatch-js/blob/442ea12/src/api/WidgetApi.ts#L25">src/api/WidgetApi.ts:25</a></li></ul></aside></section></section>
 <section class="tsd-panel-group tsd-member-group">
 <h2>Methods</h2>
 <section class="tsd-panel tsd-member"><a id="render" class="tsd-anchor"></a>
@@ -117,7 +135,7 @@
 
 <div class="tsd-comment tsd-typography"></div><aside class="tsd-sources">
 <ul>
-<li>Defined in <a href="https://github.com/saasquatch/squatch-js/blob/06aca41/src/api/WidgetApi.ts#L111">src/api/WidgetApi.ts:111</a></li></ul></aside></li></ul></section>
+<li>Defined in <a href="https://github.com/saasquatch/squatch-js/blob/442ea12/src/api/WidgetApi.ts#L111">src/api/WidgetApi.ts:111</a></li></ul></aside></li></ul></section>
 <section class="tsd-panel tsd-member"><a id="squatchReferralCookie" class="tsd-anchor"></a>
 <h3 class="tsd-anchor-link"><span>squatch<wbr/>Referral<wbr/>Cookie</span><a href="#squatchReferralCookie" aria-label="Permalink" class="tsd-anchor-icon"><svg viewBox="0 0 24 24"><use href="#icon-anchor"></use></svg></a></h3>
 <ul class="tsd-signatures">
@@ -129,7 +147,7 @@
 
 <div class="tsd-comment tsd-typography"></div><aside class="tsd-sources">
 <ul>
-<li>Defined in <a href="https://github.com/saasquatch/squatch-js/blob/06aca41/src/api/WidgetApi.ts#L152">src/api/WidgetApi.ts:152</a></li></ul></aside></li></ul></section>
+<li>Defined in <a href="https://github.com/saasquatch/squatch-js/blob/442ea12/src/api/WidgetApi.ts#L152">src/api/WidgetApi.ts:152</a></li></ul></aside></li></ul></section>
 <section class="tsd-panel tsd-member"><a id="upsertUser" class="tsd-anchor"></a>
 <h3 class="tsd-anchor-link"><span>upsert<wbr/>User</span><a href="#upsertUser" aria-label="Permalink" class="tsd-anchor-icon"><svg viewBox="0 0 24 24"><use href="#icon-anchor"></use></svg></a></h3>
 <ul class="tsd-signatures">
@@ -149,7 +167,7 @@
 
 <div class="tsd-comment tsd-typography"></div><aside class="tsd-sources">
 <ul>
-<li>Defined in <a href="https://github.com/saasquatch/squatch-js/blob/06aca41/src/api/WidgetApi.ts#L68">src/api/WidgetApi.ts:68</a></li></ul></aside></li></ul></section></section></div>
+<li>Defined in <a href="https://github.com/saasquatch/squatch-js/blob/442ea12/src/api/WidgetApi.ts#L68">src/api/WidgetApi.ts:68</a></li></ul></aside></li></ul></section></section></div>
 <div class="col-sidebar">
 <div class="page-menu">
 <div class="tsd-navigation settings">
@@ -170,6 +188,7 @@
 <li><a href="#constructor" class=""><svg class="tsd-kind-icon" viewBox="0 0 24 24"><use href="#icon-512"></use></svg><span>constructor</span></a></li>
 <li><a href="#domain" class=""><svg class="tsd-kind-icon" viewBox="0 0 24 24"><use href="#icon-1024"></use></svg><span>domain</span></a></li>
 <li><a href="#npmCdn" class=""><svg class="tsd-kind-icon" viewBox="0 0 24 24"><use href="#icon-1024"></use></svg><span>npm<wbr/>Cdn</span></a></li>
+<li><a href="#referralCookie" class=""><svg class="tsd-kind-icon" viewBox="0 0 24 24"><use href="#icon-1024"></use></svg><span>referral<wbr/>Cookie</span></a></li>
 <li><a href="#tenantAlias" class=""><svg class="tsd-kind-icon" viewBox="0 0 24 24"><use href="#icon-1024"></use></svg><span>tenant<wbr/>Alias</span></a></li>
 <li><a href="#render" class=""><svg class="tsd-kind-icon" viewBox="0 0 24 24"><use href="#icon-2048"></use></svg><span>render</span></a></li>
 <li><a href="#squatchReferralCookie" class=""><svg class="tsd-kind-icon" viewBox="0 0 24 24"><use href="#icon-2048"></use></svg><span>squatch<wbr/>Referral<wbr/>Cookie</span></a></li>
