--- a/pull/64/classes/EmbedWidget.html
+++ b/pull/64/classes/EmbedWidget.html
@@ -30,7 +30,7 @@
 <ul class="tsd-hierarchy">
 <li><span class="target">EmbedWidget</span></li></ul></li></ul></section><aside class="tsd-sources">
 <ul>
-<li>Defined in <a href="https://github.com/saasquatch/squatch-js/blob/a201345/src/widgets/EmbedWidget.ts#L22">src/widgets/EmbedWidget.ts:22</a></li></ul></aside>
+<li>Defined in <a href="https://github.com/saasquatch/squatch-js/blob/5d63968/src/widgets/EmbedWidget.ts#L22">src/widgets/EmbedWidget.ts:22</a></li></ul></aside>
 <section class="tsd-panel-group tsd-index-group">
 <section class="tsd-panel tsd-index-panel">
 <details class="tsd-index-content tsd-index-accordion" open><summary class="tsd-accordion-summary tsd-index-summary">
@@ -80,7 +80,7 @@
 <h4 class="tsd-returns-title">Returns <a href="EmbedWidget.html" class="tsd-signature-type tsd-kind-class">EmbedWidget</a></h4><aside class="tsd-sources">
 <p>Overrides Widget.constructor</p>
 <ul>
-<li>Defined in <a href="https://github.com/saasquatch/squatch-js/blob/a201345/src/widgets/EmbedWidget.ts#L23">src/widgets/EmbedWidget.ts:23</a></li></ul></aside></li></ul></section></section>
+<li>Defined in <a href="https://github.com/saasquatch/squatch-js/blob/5d63968/src/widgets/EmbedWidget.ts#L23">src/widgets/EmbedWidget.ts:23</a></li></ul></aside></li></ul></section></section>
 <section class="tsd-panel-group tsd-member-group">
 <h2>Properties</h2>
 <section class="tsd-panel tsd-member tsd-is-inherited"><a id="analyticsApi" class="tsd-anchor"></a>
@@ -88,25 +88,25 @@
 <div class="tsd-signature"><span class="tsd-kind-property">analytics<wbr/>Api</span><span class="tsd-signature-symbol">:</span> <span class="tsd-signature-type ">default</span></div><aside class="tsd-sources">
 <p>Inherited from Widget.analyticsApi</p>
 <ul>
-<li>Defined in <a href="https://github.com/saasquatch/squatch-js/blob/a201345/src/widgets/Widget.ts#L45">src/widgets/Widget.ts:45</a></li></ul></aside></section>
+<li>Defined in <a href="https://github.com/saasquatch/squatch-js/blob/5d63968/src/widgets/Widget.ts#L53">src/widgets/Widget.ts:53</a></li></ul></aside></section>
 <section class="tsd-panel tsd-member tsd-is-inherited"><a id="container" class="tsd-anchor"></a>
 <h3 class="tsd-anchor-link"><span>container</span><a href="#container" aria-label="Permalink" class="tsd-anchor-icon"><svg viewBox="0 0 24 24"><use href="#icon-anchor"></use></svg></a></h3>
 <div class="tsd-signature"><span class="tsd-kind-property">container</span><span class="tsd-signature-symbol">:</span> <span class="tsd-signature-type">undefined</span><span class="tsd-signature-symbol"> | </span><span class="tsd-signature-type">null</span><span class="tsd-signature-symbol"> | </span><span class="tsd-signature-type">string</span><span class="tsd-signature-symbol"> | </span><span class="tsd-signature-type ">HTMLElement</span></div><aside class="tsd-sources">
 <p>Inherited from Widget.container</p>
 <ul>
-<li>Defined in <a href="https://github.com/saasquatch/squatch-js/blob/a201345/src/widgets/Widget.ts#L49">src/widgets/Widget.ts:49</a></li></ul></aside></section>
+<li>Defined in <a href="https://github.com/saasquatch/squatch-js/blob/5d63968/src/widgets/Widget.ts#L57">src/widgets/Widget.ts:57</a></li></ul></aside></section>
 <section class="tsd-panel tsd-member tsd-is-inherited"><a id="content" class="tsd-anchor"></a>
 <h3 class="tsd-anchor-link"><span>content</span><a href="#content" aria-label="Permalink" class="tsd-anchor-icon"><svg viewBox="0 0 24 24"><use href="#icon-anchor"></use></svg></a></h3>
 <div class="tsd-signature"><span class="tsd-kind-property">content</span><span class="tsd-signature-symbol">:</span> <span class="tsd-signature-type">string</span></div><aside class="tsd-sources">
 <p>Inherited from Widget.content</p>
 <ul>
-<li>Defined in <a href="https://github.com/saasquatch/squatch-js/blob/a201345/src/widgets/Widget.ts#L44">src/widgets/Widget.ts:44</a></li></ul></aside></section>
+<li>Defined in <a href="https://github.com/saasquatch/squatch-js/blob/5d63968/src/widgets/Widget.ts#L52">src/widgets/Widget.ts:52</a></li></ul></aside></section>
 <section class="tsd-panel tsd-member tsd-is-inherited"><a id="context" class="tsd-anchor"></a>
 <h3 class="tsd-anchor-link"><span>context</span><a href="#context" aria-label="Permalink" class="tsd-anchor-icon"><svg viewBox="0 0 24 24"><use href="#icon-anchor"></use></svg></a></h3>
 <div class="tsd-signature"><span class="tsd-kind-property">context</span><span class="tsd-signature-symbol">:</span> <a href="../types/WidgetContext.html" class="tsd-signature-type tsd-kind-type-alias">WidgetContext</a></div><aside class="tsd-sources">
 <p>Inherited from Widget.context</p>
 <ul>
-<li>Defined in <a href="https://github.com/saasquatch/squatch-js/blob/a201345/src/widgets/Widget.ts#L47">src/widgets/Widget.ts:47</a></li></ul></aside></section>
+<li>Defined in <a href="https://github.com/saasquatch/squatch-js/blob/5d63968/src/widgets/Widget.ts#L55">src/widgets/Widget.ts:55</a></li></ul></aside></section>
 <section class="tsd-panel tsd-member"><a id="hide" class="tsd-anchor"></a>
 <h3 class="tsd-anchor-link"><span>hide</span><a href="#hide" aria-label="Permalink" class="tsd-anchor-icon"><svg viewBox="0 0 24 24"><use href="#icon-anchor"></use></svg></a></h3>
 <div class="tsd-signature"><span class="tsd-kind-property">hide</span><span class="tsd-signature-symbol">:</span> <span class="tsd-signature-symbol">(</span><span class="tsd-signature-symbol">(</span><span class="tsd-signature-symbol">)</span><span class="tsd-signature-symbol"> =&gt; </span><span class="tsd-signature-type">void</span><span class="tsd-signature-symbol">)</span><span class="tsd-signature-symbol"> = ...</span></div>
@@ -119,19 +119,19 @@
 <li class="tsd-description">
 <h4 class="tsd-returns-title">Returns <span class="tsd-signature-type">void</span></h4></li></ul></li></ul></div><aside class="tsd-sources">
 <ul>
-<li>Defined in <a href="https://github.com/saasquatch/squatch-js/blob/a201345/src/widgets/EmbedWidget.ts#L165">src/widgets/EmbedWidget.ts:165</a></li></ul></aside></section>
+<li>Defined in <a href="https://github.com/saasquatch/squatch-js/blob/5d63968/src/widgets/EmbedWidget.ts#L162">src/widgets/EmbedWidget.ts:162</a></li></ul></aside></section>
 <section class="tsd-panel tsd-member tsd-is-inherited"><a id="loadEventListener" class="tsd-anchor"></a>
 <h3 class="tsd-anchor-link"><span>load<wbr/>Event<wbr/>Listener</span><a href="#loadEventListener" aria-label="Permalink" class="tsd-anchor-icon"><svg viewBox="0 0 24 24"><use href="#icon-anchor"></use></svg></a></h3>
 <div class="tsd-signature"><span class="tsd-kind-property">load<wbr/>Event<wbr/>Listener</span><span class="tsd-signature-symbol">:</span> <span class="tsd-signature-type">null</span><span class="tsd-signature-symbol"> | </span><span class="tsd-signature-type ">EventListener</span><span class="tsd-signature-symbol"> = null</span></div><aside class="tsd-sources">
 <p>Inherited from Widget.loadEventListener</p>
 <ul>
-<li>Defined in <a href="https://github.com/saasquatch/squatch-js/blob/a201345/src/widgets/Widget.ts#L50">src/widgets/Widget.ts:50</a></li></ul></aside></section>
+<li>Defined in <a href="https://github.com/saasquatch/squatch-js/blob/5d63968/src/widgets/Widget.ts#L58">src/widgets/Widget.ts:58</a></li></ul></aside></section>
 <section class="tsd-panel tsd-member tsd-is-inherited"><a id="npmCdn" class="tsd-anchor"></a>
 <h3 class="tsd-anchor-link"><span>npm<wbr/>Cdn</span><a href="#npmCdn" aria-label="Permalink" class="tsd-anchor-icon"><svg viewBox="0 0 24 24"><use href="#icon-anchor"></use></svg></a></h3>
 <div class="tsd-signature"><span class="tsd-kind-property">npm<wbr/>Cdn</span><span class="tsd-signature-symbol">:</span> <span class="tsd-signature-type">string</span></div><aside class="tsd-sources">
 <p>Inherited from Widget.npmCdn</p>
 <ul>
-<li>Defined in <a href="https://github.com/saasquatch/squatch-js/blob/a201345/src/widgets/Widget.ts#L48">src/widgets/Widget.ts:48</a></li></ul></aside></section>
+<li>Defined in <a href="https://github.com/saasquatch/squatch-js/blob/5d63968/src/widgets/Widget.ts#L56">src/widgets/Widget.ts:56</a></li></ul></aside></section>
 <section class="tsd-panel tsd-member"><a id="show" class="tsd-anchor"></a>
 <h3 class="tsd-anchor-link"><span>show</span><a href="#show" aria-label="Permalink" class="tsd-anchor-icon"><svg viewBox="0 0 24 24"><use href="#icon-anchor"></use></svg></a></h3>
 <div class="tsd-signature"><span class="tsd-kind-property">show</span><span class="tsd-signature-symbol">:</span> <span class="tsd-signature-symbol">(</span><span class="tsd-signature-symbol">(</span><span class="tsd-signature-symbol">)</span><span class="tsd-signature-symbol"> =&gt; </span><span class="tsd-signature-type">void</span><span class="tsd-signature-symbol">)</span><span class="tsd-signature-symbol"> = ...</span></div>
@@ -147,30 +147,40 @@
 <h4 class="tsd-returns-title">Returns <span class="tsd-signature-type">void</span></h4>
 <div class="tsd-comment tsd-typography"></div></li></ul></li></ul></div><aside class="tsd-sources">
 <ul>
-<li>Defined in <a href="https://github.com/saasquatch/squatch-js/blob/a201345/src/widgets/EmbedWidget.ts#L164">src/widgets/EmbedWidget.ts:164</a></li></ul></aside></section>
+<li>Defined in <a href="https://github.com/saasquatch/squatch-js/blob/5d63968/src/widgets/EmbedWidget.ts#L161">src/widgets/EmbedWidget.ts:161</a></li></ul></aside></section>
 <section class="tsd-panel tsd-member tsd-is-inherited"><a id="type" class="tsd-anchor"></a>
 <h3 class="tsd-anchor-link"><span>type</span><a href="#type" aria-label="Permalink" class="tsd-anchor-icon"><svg viewBox="0 0 24 24"><use href="#icon-anchor"></use></svg></a></h3>
 <div class="tsd-signature"><span class="tsd-kind-property">type</span><span class="tsd-signature-symbol">:</span> <span class="tsd-signature-type">string</span></div><aside class="tsd-sources">
 <p>Inherited from Widget.type</p>
 <ul>
-<li>Defined in <a href="https://github.com/saasquatch/squatch-js/blob/a201345/src/widgets/Widget.ts#L43">src/widgets/Widget.ts:43</a></li></ul></aside></section>
+<li>Defined in <a href="https://github.com/saasquatch/squatch-js/blob/5d63968/src/widgets/Widget.ts#L51">src/widgets/Widget.ts:51</a></li></ul></aside></section>
 <section class="tsd-panel tsd-member tsd-is-inherited"><a id="widgetApi" class="tsd-anchor"></a>
 <h3 class="tsd-anchor-link"><span>widget<wbr/>Api</span><a href="#widgetApi" aria-label="Permalink" class="tsd-anchor-icon"><svg viewBox="0 0 24 24"><use href="#icon-anchor"></use></svg></a></h3>
 <div class="tsd-signature"><span class="tsd-kind-property">widget<wbr/>Api</span><span class="tsd-signature-symbol">:</span> <a href="WidgetApi.html" class="tsd-signature-type tsd-kind-class">WidgetApi</a></div><aside class="tsd-sources">
 <p>Inherited from Widget.widgetApi</p>
 <ul>
-<li>Defined in <a href="https://github.com/saasquatch/squatch-js/blob/a201345/src/widgets/Widget.ts#L46">src/widgets/Widget.ts:46</a></li></ul></aside></section></section>
+<li>Defined in <a href="https://github.com/saasquatch/squatch-js/blob/5d63968/src/widgets/Widget.ts#L54">src/widgets/Widget.ts:54</a></li></ul></aside></section></section>
 <section class="tsd-panel-group tsd-member-group">
 <h2>Methods</h2>
 <section class="tsd-panel tsd-member tsd-is-inherited"><a id="_createFrame" class="tsd-anchor"></a>
 <h3 class="tsd-anchor-link"><span>_create<wbr/>Frame</span><a href="#_createFrame" aria-label="Permalink" class="tsd-anchor-icon"><svg viewBox="0 0 24 24"><use href="#icon-anchor"></use></svg></a></h3>
 <ul class="tsd-signatures tsd-is-inherited">
-<li class="tsd-signature tsd-anchor-link" id="_createFrame._createFrame-1"><span class="tsd-kind-call-signature">_create<wbr/>Frame</span><span class="tsd-signature-symbol">(</span><span class="tsd-signature-symbol">)</span><span class="tsd-signature-symbol">: </span><span class="tsd-signature-type ">HTMLIFrameElement</span><a href="#_createFrame._createFrame-1" aria-label="Permalink" class="tsd-anchor-icon"><svg viewBox="0 0 24 24"><use href="#icon-anchor"></use></svg></a></li>
+<li class="tsd-signature tsd-anchor-link" id="_createFrame._createFrame-1"><span class="tsd-kind-call-signature">_create<wbr/>Frame</span><span class="tsd-signature-symbol">(</span><span class="tsd-kind-parameter">options</span><span class="tsd-signature-symbol">?</span><span class="tsd-signature-symbol">)</span><span class="tsd-signature-symbol">: </span><span class="tsd-signature-type ">HTMLIFrameElement</span><a href="#_createFrame._createFrame-1" aria-label="Permalink" class="tsd-anchor-icon"><svg viewBox="0 0 24 24"><use href="#icon-anchor"></use></svg></a></li>
 <li class="tsd-description">
+<div class="tsd-parameters">
+<h4 class="tsd-parameters-title">Parameters</h4>
+<ul class="tsd-parameter-list">
+<li>
+<h5><code class="tsd-tag ts-flagOptional">Optional</code> <span class="tsd-kind-parameter">options</span>: <span class="tsd-signature-symbol">{ </span><br/><span>    </span><span class="tsd-kind-property">maxWidth</span><span class="tsd-signature-symbol">?: </span><span class="tsd-signature-type">string</span><span class="tsd-signature-symbol">; </span><br/><span>    </span><span class="tsd-kind-property">minWidth</span><span class="tsd-signature-symbol">?: </span><span class="tsd-signature-type">string</span><span class="tsd-signature-symbol">; </span><br/><span class="tsd-signature-symbol">}</span></h5>
+<ul class="tsd-parameters">
+<li class="tsd-parameter">
+<h5><code class="tsd-tag ts-flagOptional">Optional</code> <span class="tsd-kind-property">max<wbr/>Width</span><span class="tsd-signature-symbol">?: </span><span class="tsd-signature-type">string</span></h5></li>
+<li class="tsd-parameter">
+<h5><code class="tsd-tag ts-flagOptional">Optional</code> <span class="tsd-kind-property">min<wbr/>Width</span><span class="tsd-signature-symbol">?: </span><span class="tsd-signature-type">string</span></h5></li></ul></li></ul></div>
 <h4 class="tsd-returns-title">Returns <span class="tsd-signature-type ">HTMLIFrameElement</span></h4><aside class="tsd-sources">
 <p>Inherited from Widget._createFrame</p>
 <ul>
-<li>Defined in <a href="https://github.com/saasquatch/squatch-js/blob/a201345/src/widgets/Widget.ts#L101">src/widgets/Widget.ts:101</a></li></ul></aside></li></ul></section>
+<li>Defined in <a href="https://github.com/saasquatch/squatch-js/blob/5d63968/src/widgets/Widget.ts#L109">src/widgets/Widget.ts:109</a></li></ul></aside></li></ul></section>
 <section class="tsd-panel tsd-member tsd-is-inherited"><a id="_findElement" class="tsd-anchor"></a>
 <h3 class="tsd-anchor-link"><span>_find<wbr/>Element</span><a href="#_findElement" aria-label="Permalink" class="tsd-anchor-icon"><svg viewBox="0 0 24 24"><use href="#icon-anchor"></use></svg></a></h3>
 <ul class="tsd-signatures tsd-is-inherited">
@@ -179,7 +189,7 @@
 <h4 class="tsd-returns-title">Returns <span class="tsd-signature-type ">HTMLElement</span></h4><aside class="tsd-sources">
 <p>Inherited from Widget._findElement</p>
 <ul>
-<li>Defined in <a href="https://github.com/saasquatch/squatch-js/blob/a201345/src/widgets/Widget.ts#L64">src/widgets/Widget.ts:64</a></li></ul></aside></li></ul></section>
+<li>Defined in <a href="https://github.com/saasquatch/squatch-js/blob/5d63968/src/widgets/Widget.ts#L72">src/widgets/Widget.ts:72</a></li></ul></aside></li></ul></section>
 <section class="tsd-panel tsd-member tsd-is-inherited"><a id="_findFrame" class="tsd-anchor"></a>
 <h3 class="tsd-anchor-link"><span>_find<wbr/>Frame</span><a href="#_findFrame" aria-label="Permalink" class="tsd-anchor-icon"><svg viewBox="0 0 24 24"><use href="#icon-anchor"></use></svg></a></h3>
 <ul class="tsd-signatures tsd-is-inherited">
@@ -188,7 +198,7 @@
 <h4 class="tsd-returns-title">Returns <span class="tsd-signature-type">null</span><span class="tsd-signature-symbol"> | </span><span class="tsd-signature-type ">HTMLIFrameElement</span></h4><aside class="tsd-sources">
 <p>Inherited from Widget._findFrame</p>
 <ul>
-<li>Defined in <a href="https://github.com/saasquatch/squatch-js/blob/a201345/src/widgets/Widget.ts#L116">src/widgets/Widget.ts:116</a></li></ul></aside></li></ul></section>
+<li>Defined in <a href="https://github.com/saasquatch/squatch-js/blob/5d63968/src/widgets/Widget.ts#L128">src/widgets/Widget.ts:128</a></li></ul></aside></li></ul></section>
 <section class="tsd-panel tsd-member"><a id="close" class="tsd-anchor"></a>
 <h3 class="tsd-anchor-link"><span>close</span><a href="#close" aria-label="Permalink" class="tsd-anchor-icon"><svg viewBox="0 0 24 24"><use href="#icon-anchor"></use></svg></a></h3>
 <ul class="tsd-signatures">
@@ -196,7 +206,7 @@
 <li class="tsd-description">
 <h4 class="tsd-returns-title">Returns <span class="tsd-signature-type">void</span></h4><aside class="tsd-sources">
 <ul>
-<li>Defined in <a href="https://github.com/saasquatch/squatch-js/blob/a201345/src/widgets/EmbedWidget.ts#L133">src/widgets/EmbedWidget.ts:133</a></li></ul></aside></li></ul></section>
+<li>Defined in <a href="https://github.com/saasquatch/squatch-js/blob/5d63968/src/widgets/EmbedWidget.ts#L130">src/widgets/EmbedWidget.ts:130</a></li></ul></aside></li></ul></section>
 <section class="tsd-panel tsd-member"><a id="load" class="tsd-anchor"></a>
 <h3 class="tsd-anchor-link"><span>load</span><a href="#load" aria-label="Permalink" class="tsd-anchor-icon"><svg viewBox="0 0 24 24"><use href="#icon-anchor"></use></svg></a></h3>
 <ul class="tsd-signatures">
@@ -205,7 +215,7 @@
 <h4 class="tsd-returns-title">Returns <span class="tsd-signature-type ">Promise</span><span class="tsd-signature-symbol">&lt;</span><span class="tsd-signature-type">void</span><span class="tsd-signature-symbol">&gt;</span></h4><aside class="tsd-sources">
 <p>Overrides Widget.load</p>
 <ul>
-<li>Defined in <a href="https://github.com/saasquatch/squatch-js/blob/a201345/src/widgets/EmbedWidget.ts#L29">src/widgets/EmbedWidget.ts:29</a></li></ul></aside></li></ul></section>
+<li>Defined in <a href="https://github.com/saasquatch/squatch-js/blob/5d63968/src/widgets/EmbedWidget.ts#L29">src/widgets/EmbedWidget.ts:29</a></li></ul></aside></li></ul></section>
 <section class="tsd-panel tsd-member"><a id="open" class="tsd-anchor"></a>
 <h3 class="tsd-anchor-link"><span>open</span><a href="#open" aria-label="Permalink" class="tsd-anchor-icon"><svg viewBox="0 0 24 24"><use href="#icon-anchor"></use></svg></a></h3>
 <ul class="tsd-signatures">
@@ -216,7 +226,7 @@
 <h4 class="tsd-returns-title">Returns <span class="tsd-signature-type">void</span></h4>
 <div class="tsd-comment tsd-typography"></div><aside class="tsd-sources">
 <ul>
-<li>Defined in <a href="https://github.com/saasquatch/squatch-js/blob/a201345/src/widgets/EmbedWidget.ts#L110">src/widgets/EmbedWidget.ts:110</a></li></ul></aside></li></ul></section>
+<li>Defined in <a href="https://github.com/saasquatch/squatch-js/blob/5d63968/src/widgets/EmbedWidget.ts#L107">src/widgets/EmbedWidget.ts:107</a></li></ul></aside></li></ul></section>
 <section class="tsd-panel tsd-member tsd-is-inherited"><a id="reload" class="tsd-anchor"></a>
 <h3 class="tsd-anchor-link"><span>reload</span><a href="#reload" aria-label="Permalink" class="tsd-anchor-icon"><svg viewBox="0 0 24 24"><use href="#icon-anchor"></use></svg></a></h3>
 <ul class="tsd-signatures tsd-is-inherited">
@@ -242,7 +252,7 @@ Primarily for Classic widgets with registration</p>
 <div class="tsd-comment tsd-typography"></div><aside class="tsd-sources">
 <p>Inherited from Widget.reload</p>
 <ul>
-<li>Defined in <a href="https://github.com/saasquatch/squatch-js/blob/a201345/src/widgets/Widget.ts#L295">src/widgets/Widget.ts:295</a></li></ul></aside></li></ul></section></section></div>
+<li>Defined in <a href="https://github.com/saasquatch/squatch-js/blob/5d63968/src/widgets/Widget.ts#L307">src/widgets/Widget.ts:307</a></li></ul></aside></li></ul></section></section></div>
 <div class="col-sidebar">
 <div class="page-menu">
 <div class="tsd-navigation settings">
