--- a/interfaces/CookieWidgetConfig.html
+++ b/interfaces/CookieWidgetConfig.html
@@ -30,7 +30,7 @@
 <ul class="tsd-hierarchy">
 <li><span class="target">CookieWidgetConfig</span></li></ul></section><aside class="tsd-sources">
 <ul>
-<li>Defined in <a href="https://github.com/saasquatch/squatch-js/blob/1d15a58/src/types.ts#L48">src/types.ts:48</a></li></ul></aside>
+<li>Defined in <a href="https://github.com/saasquatch/squatch-js/blob/c422ea1/src/types.ts#L58">src/types.ts:58</a></li></ul></aside>
 <section class="tsd-panel-group tsd-index-group">
 <section class="tsd-panel tsd-index-panel">
 <details class="tsd-index-content tsd-index-accordion" open><summary class="tsd-accordion-summary tsd-index-summary">
@@ -49,22 +49,22 @@
 <h3 class="tsd-anchor-link"><code class="tsd-tag ts-flagOptional">Optional</code> <span>engagement<wbr/>Medium</span><a href="#engagementMedium" aria-label="Permalink" class="tsd-anchor-icon"><svg viewBox="0 0 24 24"><g stroke-width="2" stroke="currentColor" fill="none" stroke-linecap="round" stroke-linejoin="round" id="icon-anchor"><path stroke="none" d="M0 0h24v24H0z" fill="none"></path><path d="M10 14a3.5 3.5 0 0 0 5 0l4 -4a3.5 3.5 0 0 0 -5 -5l-.5 .5"></path><path d="M14 10a3.5 3.5 0 0 0 -5 0l-4 4a3.5 3.5 0 0 0 5 5l.5 -.5"></path></g></svg></a></h3>
 <div class="tsd-signature"><span class="tsd-kind-property">engagement<wbr/>Medium</span><span class="tsd-signature-symbol">?:</span> <a href="../types/EngagementMedium.html" class="tsd-signature-type tsd-kind-type-alias">EngagementMedium</a></div><aside class="tsd-sources">
 <ul>
-<li>Defined in <a href="https://github.com/saasquatch/squatch-js/blob/1d15a58/src/types.ts#L51">src/types.ts:51</a></li></ul></aside></section>
+<li>Defined in <a href="https://github.com/saasquatch/squatch-js/blob/c422ea1/src/types.ts#L61">src/types.ts:61</a></li></ul></aside></section>
 <section class="tsd-panel tsd-member"><a id="jwt" class="tsd-anchor"></a>
 <h3 class="tsd-anchor-link"><code class="tsd-tag ts-flagOptional">Optional</code> <span>jwt</span><a href="#jwt" aria-label="Permalink" class="tsd-anchor-icon"><svg viewBox="0 0 24 24"><use href="#icon-anchor"></use></svg></a></h3>
 <div class="tsd-signature"><span class="tsd-kind-property">jwt</span><span class="tsd-signature-symbol">?:</span> <span class="tsd-signature-type">string</span></div><aside class="tsd-sources">
 <ul>
-<li>Defined in <a href="https://github.com/saasquatch/squatch-js/blob/1d15a58/src/types.ts#L52">src/types.ts:52</a></li></ul></aside></section>
+<li>Defined in <a href="https://github.com/saasquatch/squatch-js/blob/c422ea1/src/types.ts#L62">src/types.ts:62</a></li></ul></aside></section>
 <section class="tsd-panel tsd-member"><a id="user" class="tsd-anchor"></a>
 <h3 class="tsd-anchor-link"><code class="tsd-tag ts-flagOptional">Optional</code> <span>user</span><a href="#user" aria-label="Permalink" class="tsd-anchor-icon"><svg viewBox="0 0 24 24"><use href="#icon-anchor"></use></svg></a></h3>
 <div class="tsd-signature"><span class="tsd-kind-property">user</span><span class="tsd-signature-symbol">?:</span> <a href="../types/CookieUser.html" class="tsd-signature-type tsd-kind-type-alias">CookieUser</a></div><aside class="tsd-sources">
 <ul>
-<li>Defined in <a href="https://github.com/saasquatch/squatch-js/blob/1d15a58/src/types.ts#L49">src/types.ts:49</a></li></ul></aside></section>
+<li>Defined in <a href="https://github.com/saasquatch/squatch-js/blob/c422ea1/src/types.ts#L59">src/types.ts:59</a></li></ul></aside></section>
 <section class="tsd-panel tsd-member"><a id="widgetType" class="tsd-anchor"></a>
 <h3 class="tsd-anchor-link"><code class="tsd-tag ts-flagOptional">Optional</code> <span>widget<wbr/>Type</span><a href="#widgetType" aria-label="Permalink" class="tsd-anchor-icon"><svg viewBox="0 0 24 24"><use href="#icon-anchor"></use></svg></a></h3>
 <div class="tsd-signature"><span class="tsd-kind-property">widget<wbr/>Type</span><span class="tsd-signature-symbol">?:</span> <span class="tsd-signature-type">string</span></div><aside class="tsd-sources">
 <ul>
-<li>Defined in <a href="https://github.com/saasquatch/squatch-js/blob/1d15a58/src/types.ts#L50">src/types.ts:50</a></li></ul></aside></section></section></div>
+<li>Defined in <a href="https://github.com/saasquatch/squatch-js/blob/c422ea1/src/types.ts#L60">src/types.ts:60</a></li></ul></aside></section></section></div>
 <div class="col-sidebar">
 <div class="page-menu">
 <div class="tsd-navigation settings">
@@ -99,6 +99,7 @@
 <li><a href="CookieWidgetConfig.html" class="current"><svg class="tsd-kind-icon" viewBox="0 0 24 24"><use href="#icon-256"></use></svg><span>Cookie<wbr/>Widget<wbr/>Config</span></a></li>
 <li><a href="WidgetConfig.html"><svg class="tsd-kind-icon" viewBox="0 0 24 24"><use href="#icon-256"></use></svg><span>Widget<wbr/>Config</span></a></li>
 <li><a href="WidgetResult.html"><svg class="tsd-kind-icon" viewBox="0 0 24 24"><use href="#icon-256"></use></svg><span>Widget<wbr/>Result</span></a></li>
+<li><a href="WidgetValueConfig.html"><svg class="tsd-kind-icon" viewBox="0 0 24 24"><use href="#icon-256"></use></svg><span>Widget<wbr/>Value<wbr/>Config</span></a></li>
 <li><a href="../types/BaseWidgetContext.html"><svg class="tsd-kind-icon" viewBox="0 0 24 24"><g id="icon-4194304"><rect fill="var(--color-icon-background)" stroke="var(--color-ts-type-alias)" stroke-width="1.5" x="1" y="1" width="22" height="22" rx="6"></rect><path d="M11.31 16V8.224H8.91V7.24H14.79V8.224H12.39V16H11.31Z" fill="var(--color-text)"></path></g></svg><span>Base<wbr/>Widget<wbr/>Context</span></a></li>
 <li><a href="../types/CookieUser.html"><svg class="tsd-kind-icon" viewBox="0 0 24 24"><use href="#icon-4194304"></use></svg><span>Cookie<wbr/>User</span></a></li>
 <li><a href="../types/DeclarativeConfigOptions.html"><svg class="tsd-kind-icon" viewBox="0 0 24 24"><use href="#icon-4194304"></use></svg><span>Declarative<wbr/>Config<wbr/>Options</span></a></li>
