--- a/modules.html
+++ b/modules.html
@@ -37,6 +37,7 @@ referral short links and referral codes, and more.</p>
 <a href="interfaces/CookieWidgetConfig.html" class="tsd-index-link"><svg class="tsd-kind-icon" viewBox="0 0 24 24"><use href="#icon-256"></use></svg><span>Cookie<wbr/>Widget<wbr/>Config</span></a>
 <a href="interfaces/WidgetConfig.html" class="tsd-index-link"><svg class="tsd-kind-icon" viewBox="0 0 24 24"><use href="#icon-256"></use></svg><span>Widget<wbr/>Config</span></a>
 <a href="interfaces/WidgetResult.html" class="tsd-index-link"><svg class="tsd-kind-icon" viewBox="0 0 24 24"><use href="#icon-256"></use></svg><span>Widget<wbr/>Result</span></a>
+<a href="interfaces/WidgetValueConfig.html" class="tsd-index-link"><svg class="tsd-kind-icon" viewBox="0 0 24 24"><use href="#icon-256"></use></svg><span>Widget<wbr/>Value<wbr/>Config</span></a>
 </div></section>
 <section class="tsd-index-section">
 <h3 class="tsd-index-heading">Type Aliases</h3>
@@ -92,6 +93,7 @@ referral short links and referral codes, and more.</p>
 <li><a href="interfaces/CookieWidgetConfig.html"><svg class="tsd-kind-icon" viewBox="0 0 24 24"><use href="#icon-256"></use></svg><span>Cookie<wbr/>Widget<wbr/>Config</span></a></li>
 <li><a href="interfaces/WidgetConfig.html"><svg class="tsd-kind-icon" viewBox="0 0 24 24"><use href="#icon-256"></use></svg><span>Widget<wbr/>Config</span></a></li>
 <li><a href="interfaces/WidgetResult.html"><svg class="tsd-kind-icon" viewBox="0 0 24 24"><use href="#icon-256"></use></svg><span>Widget<wbr/>Result</span></a></li>
+<li><a href="interfaces/WidgetValueConfig.html"><svg class="tsd-kind-icon" viewBox="0 0 24 24"><use href="#icon-256"></use></svg><span>Widget<wbr/>Value<wbr/>Config</span></a></li>
 <li><a href="types/BaseWidgetContext.html"><svg class="tsd-kind-icon" viewBox="0 0 24 24"><use href="#icon-4194304"></use></svg><span>Base<wbr/>Widget<wbr/>Context</span></a></li>
 <li><a href="types/CookieUser.html"><svg class="tsd-kind-icon" viewBox="0 0 24 24"><use href="#icon-4194304"></use></svg><span>Cookie<wbr/>User</span></a></li>
 <li><a href="types/DeclarativeConfigOptions.html"><svg class="tsd-kind-icon" viewBox="0 0 24 24"><use href="#icon-4194304"></use></svg><span>Declarative<wbr/>Config<wbr/>Options</span></a></li>
